[refector]카카오 인증에 맞게끔 API 수정
